<?xml version="1.0"?>
<package format="3">
  <name>sg-slam</name>
  <version>0.9.0</version>
  <description>SemanticSLAM: ROS2 version of sg-slam</description>
  <maintainer email="zhtf221@163.com">wpr</maintainer>
  <license>GPLv3</license>

  <!-- In ROS2, ament is used as the build system instead of catkin -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend> <!-- Replaces roscpp -->
  <depend>rclpy</depend> <!-- Replaces rospy -->
  <depend>message_generation</depend> <!-- Might need to be replaced or removed depending on your setup -->
  <depend>message_filters</depend> <!-- Check for ROS2 equivalent or updates -->
  <depend>image_transport</depend> <!-- Check for ROS2 version -->
  <depend>tf2_ros</depend> <!-- Replaces tf -->
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend> <!-- For PCL support in ROS2 -->
  <depend>grid_map_msgs</depend>
  <depend>grid_map</depend> <!-- Check for ROS2 version -->
  <!-- Additional ROS2 dependencies might be needed depending on your package's requirements -->

  <export>
    <!-- ROS2 packages might require additional export information -->
  </export>
</package>
